# antilag-next

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  sync-release-notes.yml
AntiLagNext/: AntiLagNext.sln  Directory.Build.props  README.md
AntiLagNext/native/AntiLagNext.Native/: AntiLagNext.Native.cpp  CMakeLists.txt
AntiLagNext/src/AntiLagNext.App/: AntiLagNext.App.csproj  App.xaml  App.xaml.cs  GlobalUsings.cs  app.manifest  appsettings.json
AntiLagNext/src/AntiLagNext.Cli/: AntiLagNext.Cli.csproj  Program.cs  app.manifest
AntiLagNext/src/AntiLagNext.Core/: AntiLagNext.Core.csproj
AntiLagNext/src/AntiLagNext.Infrastructure/: AntiLagNext.Infrastructure.csproj  DependencyInjection.cs
AntiLagNext/src/AntiLagNext.Ui/: AntiLagNext.Ui.csproj  Program.cs  app.manifest
AntiLagNext/tests/AntiLagNext.Core.Tests/: AntiLagNext.Core.Tests.csproj
AntiLagNext/tests/AntiLagNext.Infrastructure.Tests/: AntiLagNext.Infrastructure.Tests.csproj  AuditAreaTests.cs  BackupServiceSnapshotTests.cs  DiagnosticsExportServiceTests.cs  (+4 more)
docs/: ARCHITECTURE.md  IMPROVEMENTS.md  PLUGINS.md  QA_SMOKE.md
installer/: AntiLagNext.iss
scripts/: _fix_profile_button_lang.py  _fix_profile_lang_simple.py  _fix_profile_ru_en.py  _fix_ru_gaming.py  _patch_profile_i18n.py  build-installer.ps1  build-installers.ps1  build-setup-selfcontained.ps1  check-i18n.ps1  hard-test.ps1  publish-all.ps1  publish.ps1
(+106 files in other folders)
